This file lists changes on this extension.
Localisation updates are done on betawiki and aren't listed here.

0.10.6 - 24 November 2008
  Fixed overflowing bug for small screens in Special:Configure

0.10.5 - 23 November 2008
  * New section "Popular settings" replacing "General settings" at the beginning
    of Special:Configure
  * Hide massive settings like group permissions with a collapse box
  * Fixed a fatal error in writePHP.php

0.10.4 - 22 November 2008
  * MediaWiki: added $wgNamespacesToBeSearchedProject and $wgUsePrivateIPs.
  * Extensions: updated CodeReview and OggHandler; added OpenSearchXml.

0.10.3 - 21 November 2008
  Fixed a bug in preview diffs.

0.10.2 - 20 November 2008
  Added a border to all table cells.

0.10.1 - 19 November 2008
  * Added links for APC and User Merge extensions.
  * Settings descriptions are now also shown on differences.

0.10.0 - 15 November 2008
  * Added $wgConfigureFileSystemCache to allow file-system cache (only with
    database handler)
  * Added description for each setting.
  * API module can now be disabled with $wgConfigureAPI.
  * Removed $wgNamespacesToBeSearchedProject.


0.9.7 - 14 November 2008
  * Added SocialProfile, SpamRegex and UserMerge extensions.
  * Updated Inputbox extension.

0.9.6 - 13 November 2008
  * Version list on Special:ViewConfig now uses a pager.
  * Listed version at the top Special:Configure and Special:Extension are only
    shown when they contain the configuration for the wiki being modified.

0.9.5 - 12 November 2008
  Added $wgNamespacesToBeSearchedProject.

0.9.4 - 9 November 2008
  Fixed type of $wgPasswordAttemptThrottle.

0.9.3 - 8 November 2008
  Version listing on Special:ViewConfig now doesn't load the whole configuration
  for each version when using database handler.

0.9.2 - 6 November 2008
  Fixed a bug in settings merging (introduced in version 0.8.10).

0.9.1 - 5 November 2008
  * MediaWiki: added $wgAllowUserSkin, $wgDebugLogPrefix, $wgEnotifUseRealName